# ChangeLog for dev-ruby/selenium-webdriver
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/selenium-webdriver/ChangeLog,v 1.49 2013/08/30 06:03:40 graaff Exp $

*selenium-webdriver-2.35.1 (30 Aug 2013)

  30 Aug 2013; Hans de Graaff <graaff@gentoo.org>
  +selenium-webdriver-2.35.1.ebuild:
  Version bump. Depend on slotted version of rubyzip like the upstream gem.

*selenium-webdriver-2.35.0 (16 Aug 2013)

  16 Aug 2013; Hans de Graaff <graaff@gentoo.org>
  +selenium-webdriver-2.35.0.ebuild:
  Version bump.

*selenium-webdriver-2.34.0 (08 Aug 2013)

  08 Aug 2013; Hans de Graaff <graaff@gentoo.org>
  +selenium-webdriver-2.34.0.ebuild:
  Version bump.

*selenium-webdriver-2.33.0 (27 May 2013)

  27 May 2013; Hans de Graaff <graaff@gentoo.org>
  +selenium-webdriver-2.33.0.ebuild:
  Version bump.

  27 May 2013; Hans de Graaff <graaff@gentoo.org>
  -selenium-webdriver-2.29.0-r1.ebuild, -selenium-webdriver-2.30.0.ebuild:
  Cleanup.

*selenium-webdriver-2.32.1 (19 Apr 2013)

  19 Apr 2013; Hans de Graaff <graaff@gentoo.org>
  +selenium-webdriver-2.32.1.ebuild:
  Version bump.

*selenium-webdriver-2.31.0 (08 Mar 2013)

  08 Mar 2013; Hans de Graaff <graaff@gentoo.org>
  +selenium-webdriver-2.31.0.ebuild:
  Version bump.

  08 Mar 2013; Hans de Graaff <graaff@gentoo.org>
  -selenium-webdriver-2.26.0.ebuild, -selenium-webdriver-2.27.2.ebuild:
  Cleanup.

*selenium-webdriver-2.30.0 (22 Feb 2013)

  22 Feb 2013; Hans de Graaff <graaff@gentoo.org>
  +selenium-webdriver-2.30.0.ebuild:
  Version bump.

*selenium-webdriver-2.29.0-r1 (25 Jan 2013)

  25 Jan 2013; Hans de Graaff <graaff@gentoo.org>
  -selenium-webdriver-2.29.0.ebuild, +selenium-webdriver-2.29.0-r1.ebuild:
  Update gemspec for the libwebsocket to websocket change.

*selenium-webdriver-2.29.0 (22 Jan 2013)

  22 Jan 2013; Hans de Graaff <graaff@gentoo.org>
  +selenium-webdriver-2.29.0.ebuild:
  Version bump.
