@@ -1,14 +1,0 @@
-DEFINED_PHASES=compile configure install prepare setup test unpack
-DEPEND=test? ( ruby_targets_ruby18? ( >=dev-ruby/childprocess-0.2.5[ruby_targets_ruby18] >=dev-ruby/multi_json-1.0.4[ruby_targets_ruby18] dev-ruby/rubyzip[ruby_targets_ruby18] ) ruby_targets_ruby19? ( >=dev-ruby/childprocess-0.2.5[ruby_targets_ruby19] >=dev-ruby/multi_json-1.0.4[ruby_targets_ruby19] dev-ruby/rubyzip[ruby_targets_ruby19] ) ) ruby_targets_ruby18? ( dev-lang/ruby:1.8 ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby18? ( virtual/rubygems[ruby_targets_ruby18] ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) test? ( ruby_targets_ruby18? ( virtual/rubygems[ruby_targets_ruby18] ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) )
-DESCRIPTION=This gem provides Ruby bindings for WebDriver.
-EAPI=5
-HOMEPAGE=http://gemcutter.org/gems/selenium-webdriver
-IUSE=test elibc_FreeBSD ruby_targets_ruby18 ruby_targets_ruby19 test
-KEYWORDS=~amd64 ~x86
-LICENSE=Apache-2.0
-RDEPEND=ruby_targets_ruby18? ( >=dev-ruby/childprocess-0.2.5[ruby_targets_ruby18] >=dev-ruby/multi_json-1.0.4[ruby_targets_ruby18] dev-ruby/rubyzip[ruby_targets_ruby18] ) ruby_targets_ruby19? ( >=dev-ruby/childprocess-0.2.5[ruby_targets_ruby19] >=dev-ruby/multi_json-1.0.4[ruby_targets_ruby19] dev-ruby/rubyzip[ruby_targets_ruby19] ) ruby_targets_ruby18? ( dev-lang/ruby:1.8 ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby18? ( virtual/rubygems[ruby_targets_ruby18] ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] )
-REQUIRED_USE=|| ( ruby_targets_ruby18 ruby_targets_ruby19 )
-SLOT=0
-SRC_URI=mirror://rubygems/selenium-webdriver-2.33.0.gem
-_eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	java-utils-2	8d0d93b7a8605ea346cce4604f6db516	multilib	892e597faee02a5b94eb02ab512e7622	ruby-fakegem	6e366daedf25d7020291916549562bbf	ruby-ng	69c01a1b984ed066bc91b4397b002f6a	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
-_md5_=c4960d0600ef44b5ff3a5174a7d029c8
